# ezbox

./: AtherosAR7240.md  ChangeLog  EzboxBuildbot.md  EzboxConfigurationDaemon.md  EzboxDevelopmentEnvironment.md  EzboxDistro.md  EzboxIRC.md  EzboxMicroSystem.md  EzboxRobot.md  Ezbus.md  EzusMCS51.md  HowtoBuy.md  HuaweiEchoLifeHG522C.md  IGRSimplementation.md  Licensing.md  Linksys_WRH54G_V1.md  LuaServerPages.md  Makefile  MultiAgentSystem.md  ProjectHome.md  README  SoftwareArchitecture.md  SoftwareQA.md  TPLink_TL_WR541Gplus_V1.md  TPLink_TL_WR740N_V4.md  default.mk.sample
sub-projects/ezcd/: AUTHORS  INSTALL  Makefile.am  autogen.sh  configure  configure.ac  configure.in
sub-projects/ezcd/include/: ezcd.h
sub-projects/ezcd/libezcfg/: libezcfg.h
sub-projects/ezcd/src/: ezcd.c  main.c
sub-projects/ezcfg/: Makefile.am  autogen.sh  configure.ac
sub-projects/ezcfg/doc/: EZCFG_NVRAM.wsdl  IGRS_1_0_DeviceDescriptionTemplate.xml  IGRS_1_0_ServiceDescriptionTemplate_WSDL_1_1.wsdl  IGRS_1_0_ServiceDescriptionTemplate_WSDL_2_0.wsdl  IGRS_1_0_TransportBindingTemplate.xml  README_ezcd  README_ezcm  ezbox_boot.cfg  ezbox_boot.cfg.dft  ezcd.conf
sub-projects/ezcfg/doc/ezcnc/: cnc-xendoll.cfg  cnc-xendoll.hal
sub-projects/ezcfg/ezcd/: Makefile.am  configure.ac  exported_symbols  ezcd.c  ezcd.h  ezcd.pc.in  ezci.c  ezcm.c  init.c  main.c  nvram.c
sub-projects/ezcfg/ezcd/action/: lan_services_start  lan_services_stop  system_boot  system_start  system_stop  wan_services_start  wan_services_stop
sub-projects/ezcfg/ezcd/include/: ezcd.h  pop_func.h  rc_func.h  utils.h
sub-projects/ezcfg/ezcd/lib/: Makefile.am  exported_symbols
sub-projects/ezcfg/ezcd/src/: agent_env.c  ezcd.c  ezcm.c  ezcm_igrs.c  igrs_monitor.c  init.c  main.c  nvram.c  pop_etc_hotplug2_rules.c  pop_etc_inittab.c  preinit.c  rc.c  shelld.c  ubootenv.c  udhcpc_script.c  upfw.c  upnp_monitor.c  utils.c
sub-projects/ezcfg/ezcd/src/pop/: pop_etc_banner.c  pop_etc_cgconfig_conf.c  pop_etc_cgrules_conf.c  pop_etc_chilli_conf.c  pop_etc_dhid_conf.c  pop_etc_dhis_db.c  pop_etc_dhisd_conf.c  pop_etc_dillo_dillorc.c  pop_etc_dnsmasq_conf.c  pop_etc_emc2_configs.c  pop_etc_emc2_rtapi_conf.c  pop_etc_ezcd_conf.c  pop_etc_ezcfg_conf.c  pop_etc_ezcfg_igrsd.c  pop_etc_ezcfg_upnpd.c  pop_etc_ezcfg_upnpd_igd1.c  pop_etc_ezcm_conf.c  pop_etc_fonts.c  pop_etc_freeradius2_clients_conf.c  pop_etc_freeradius2_dictionary.c  pop_etc_freeradius2_eap_conf.c  pop_etc_freeradius2_radiusd_conf.c  pop_etc_group.c  pop_etc_hostname.c  pop_etc_hosts.c  pop_etc_hotplug2_rules.c  pop_etc_inittab.c  pop_etc_iptables_firewall.c  pop_etc_iptables_modules.c  pop_etc_keys_data_partition_key.c  pop_etc_keys_rootfs_key.c  pop_etc_l7_protocols.c  pop_etc_lxc_lxc_conf.c  pop_etc_mactab.c  pop_etc_mdev_conf.c  pop_etc_modules.c  pop_etc_mtab.c  pop_etc_network_interfaces.c  pop_etc_nvram_conf.c  pop_etc_passwd.c  (+10 more)
sub-projects/ezcfg/ezcd/src/rc/: rc_base_files.c  rc_data_storage.c  rc_debug.c  rc_dillo.c  rc_dnsmasq.c  rc_emc2.c  rc_emc2_latency_test.c  rc_ezcd.c  rc_ezcfg_httpd.c  rc_ezcm.c  rc_fontconfig.c  rc_func.c  rc_hotplug2.c  rc_init.c  rc_iptables.c  rc_kdrive.c  rc_klogd.c  rc_lan.c  rc_lan_if.c  rc_lan_services.c  rc_ldconfig.c  rc_load_kernel_modules.c  rc_load_modules.c  rc_login.c  rc_loopback.c  rc_mdev.c  rc_mount_system_fs.c  rc_nano_x.c  rc_netbase.c  rc_network.c  rc_nvram.c  rc_preboot.c  rc_realtime.c  rc_syslog.c  rc_syslogd.c  rc_system.c  rc_telnetd.c  rc_wan.c  rc_wan_if.c  rc_wan_services.c  (+2 more)
sub-projects/ezcfg/ezcd/src/rcso/: env_action_base_files.c  env_action_bootstrap.c  env_action_br_lan_if.c  env_action_cgroup.c  env_action_data_partition.c  env_action_data_storage.c  env_action_dmcrypt_data_partition.c  env_action_eth_lan_if.c  rc_action.c  (+85 more)
sub-projects/ezcfg/i18n/html/: pot_list.txt
sub-projects/ezcfg/include/: ezcd.h
sub-projects/ezcfg/libezcfg/: Makefile.am  configure.ac  exported_symbols  exported_symbols_test  libezcfg-ctrl.c  libezcfg-http.c  libezcfg-igrs.c  libezcfg-isdp.c  libezcfg-list.c  libezcfg-master.c  libezcfg-monitor.c  libezcfg-nvram.c  libezcfg-private.h  libezcfg-soap.c  libezcfg-soap_http.c  libezcfg-socket.c  libezcfg-thread.c  libezcfg-util.c  libezcfg-uuid.c  libezcfg-worker.c  libezcfg-xml.c  libezcfg.c  libezcfg.h  libezcfg.pc.in
sub-projects/ezcfg/libezcfg/include/: ezcfg-adsl_wan.h  ezcfg-br_lan.h  ezcfg-brlan.h  ezcfg-dhid.h  ezcfg-dhisd.h  ezcfg-dillo.h  ezcfg-dmcrypt.h  ezcfg-dnsmasq.h  ezcfg-emc2.h  ezcfg-env.h  ezcfg-errno.h  ezcfg-eth_lan.h  ezcfg-eth_wan.h  ezcfg-ezbox_distro.h  ezcfg-ezcfg.h  ezcfg-freeradius2_server.h  ezcfg-html.h  ezcfg-http.h  ezcfg-http_html_admin.h  ezcfg-http_html_apply.h  ezcfg-igrs.h  ezcfg-iptables.h  ezcfg-json_http.h  ezcfg-kdrive.h  ezcfg-lan.h  ezcfg-loopback.h  ezcfg-lxc.h  ezcfg-nano_x.h  ezcfg-nvram_defaults.h  ezcfg-openssl.h  ezcfg-ppp.h  ezcfg-pppoe_server.h  ezcfg-priv_agent.h  ezcfg-priv_args.h  ezcfg-priv_auth.h  ezcfg-priv_common.h  ezcfg-priv_ctrl.h  ezcfg-priv_ezctp.h  ezcfg-priv_http.h  ezcfg-priv_http_nvram.h  (+38 more)
sub-projects/ezcfg/libezcfg/lib/: Makefile.am
sub-projects/ezcfg/libezcfg/src/: libezcfg-ctrl.c  libezcfg-http.c  libezcfg-igrs.c  libezcfg-list.c  libezcfg-master.c  libezcfg-nvram.c  libezcfg-nvram_defaults.c  libezcfg-soap.c  libezcfg-soap_http.c  libezcfg-socket.c  libezcfg-thread.c  libezcfg-util.c  libezcfg-uuid.c  libezcfg-worker.c  libezcfg-xml.c  libezcfg.c
sub-projects/ezcfg/libezcfg/tests/: Makefile.am  check_xml.c  valgrind_check.sh
sub-projects/ezcfg/scripts/: gen-pot-files.sh
sub-projects/ezcfg/tests/libezcfg/: Makefile.am  configure.ac
sub-projects/ezcfg/web/admin/: index.shtm
sub-projects/ezcnc/: CMakeLists.txt
sub-projects/ezcnc/Common/: CMakeLists.txt  EzcncConfig.h.in  EzcncThreads.h  EzcncVersion.h.in
sub-projects/ezcnc/Fltk/: CMakeLists.txt  Main.cxx  fltkGui.cxx  fltkGui.h  mainWindow.cxx  mainWindow.h  simulateWindow.cxx  simulateWindow.h  threads.h
sub-projects/ezcnc/contrib/Fl_Tree/: CMakeLists.txt  Fl_Tree_Prefs.cxx
sub-projects/ezcnc/contrib/NativeFileChooser/: CMakeLists.txt
(+753 files in other folders)
